--- a/web.xml
+++ b/web.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE web-app
 PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
 "http://java.sun.com/dtd/web-app_2_3.dtd">
@@ -8,26 +8,10 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
         <servlet-name>hello</servlet-name>
         <servlet-class>clavision.Hello</servlet-class>
     </servlet>
-    <servlet>
-        <servlet-name>api</servlet-name>
-        <servlet-class>clavision.Api</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>index</servlet-name>
-        <servlet-class>clavision.Index</servlet-class>
-    </servlet>
 
     <servlet-mapping>
         <servlet-name>hello</servlet-name>
         <url-pattern>/hello</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>api</servlet-name>
-        <url-pattern>/api</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>index</servlet-name>
-        <url-pattern>/</url-pattern>
     </servlet-mapping>
 
 </web-app>
