--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,11 @@ jobs:
         run: mkdir ./distribution
       - name: Move index.html
         run: mv ./source/index.html ./distribution/index.html
+      - name: Replace main script path
+        run: >-
+          sed -i -e
+          's!src="/main.ts"!src="/main.js"!g'
+          ./distribution/index.html
       - name: Parcel build (npx parcel build)
         run: npx parcel build ./source/main.ts --out-dir ./distribution
       - name: Replace service worker path
